--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ matrix:
       sudo: false
       language: python
       python: 3.5
+      env: PIPENV_SKIP_LOCK=True
     - os: linux
       dist: xenial
       sudo: false
@@ -21,7 +22,7 @@ matrix:
       osx_image: xcode7.3
       sudo: required
       language: generic
-      env: PY_VER=3.5.2
+      env: PY_VER=3.5.2 PIPENV_SKIP_LOCK=True
 
 before_install:
   # OS info
