--- a/Pipfile
+++ b/Pipfile
@@ -17,8 +17,7 @@ PyInstaller = ">=3.3"
 setuptools_scm = "*"
 # Linting
 flake8 = "*"
-# Requires Python 3.5+
-# flake8-bugbear = "*"
+flake8-bugbear = {version = "*",markers = "python_version >= '3.5'"}
 black = {version = "==19.3b0",markers = "python_version >= '3.6'"}
 flake8-builtins = "*"
 flake8-docstrings = "*"
