--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-  "python.unitTest.unittestEnabled": false,
-  "python.unitTest.pyTestEnabled": true,
-  "python.unitTest.nosetestsEnabled": false,
+  "python.testing.unittestEnabled": false,
+  "python.testing.pyTestEnabled": true,
+  "python.testing.nosetestsEnabled": false,
   "python.formatting.provider": "black",
   "python.formatting.blackArgs": [
     "--target-version",
