--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_install:
 install:
   # Install and check installed packages
   - python3 -m pip install pipenv
-  - python3 -m pipenv install --dev .
+  - python3 -m pipenv install --dev . --ignore-pipfile
   - python3 -m pipenv run python --version
   - python3 -m pipenv run pip freeze
 
