--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,14 +5,6 @@ exclude:
   - Gemfile.lock
 plugins:
   - jekyll-remote-theme
-markdown:
-  - kramdown
 
-# Markdown settings: https://jekyllrb.com/docs/configuration/markdown/
-kramdown:
-  # GitHub flavoured markdown
-  input: GFM
-  # Interprets line breaks literally
-  hard_wrap: false
-
+# Theme and theme options
 remote_theme: carlosperate/jekyll-theme-rtd
