--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,12 @@ matrix:
       sudo: false
       language: python
       python: 3.8
-    # OS X 10.11 El Capitan
+    # OS X 10.12 Sierra
     - os: osx
-      osx_image: xcode7.3
+      osx_image: xcode8.3
       sudo: required
       language: generic
-      env: PY_VER=3.5.2 PIPENV_SKIP_LOCK=True
+      env: PY_VER=3.6.3 PIPENV_SKIP_LOCK=True
 
 before_install:
   # OS info
