--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,7 @@ ubittool = {path = "."}
 
 [dev-packages]
 # Installing from a git commit as there are issues with pip 19
-# PyInstaller = ">=3.3"
-pyinstaller = {git = "https://github.com/pyinstaller/pyinstaller.git",ref = "9dd34bdfbaeaa4e0459bd3051d1caf0c7d75073f"}
+PyInstaller = ">=3.6"
 # PyOCD needs this as a setup_requires, for some reason 'pipenv install' in
 # Travis doesn't pick it up and PyOCD fails to install or run
 setuptools_scm = "*"
