Project: Fix VSCode settings for launching the debugger.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": true,
-      "pythonPath": "${config:python.pythonPath}",
+      "pythonPath": "${command:python.interpreterPath}",
       "program": "${file}",
       "cwd": "${workspaceFolder}",
       "env": {},
@@ -21,7 +21,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": true,
-      "pythonPath": "${config:python.pythonPath}",
+      "pythonPath": "${command:python.interpreterPath}",
       "program": "${file}",
       "cwd": "",
       "console": "integratedTerminal",
@@ -35,7 +35,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": true,
-      "pythonPath": "${config:python.pythonPath}",
+      "pythonPath": "${command:python.interpreterPath}",
       "program": "${file}",
       "cwd": "",
       "console": "externalTerminal",
@@ -49,8 +49,8 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath": "${config:python.pythonPath}",
-      "program": "${workspaceFolder}/ubitflashtool/cli.py",
+      "pythonPath": "${command:python.interpreterPath}",
+      "program": "${workspaceFolder}/ubittool/cli.py",
       "args": [],
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
@@ -64,8 +64,8 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath": "${config:python.pythonPath}",
-      "program": "${workspaceFolder}/ubitflashtool/gui.py",
+      "pythonPath": "${command:python.interpreterPath}",
+      "program": "${workspaceFolder}/ubittool/gui.py",
       "args": [],
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
@@ -79,8 +79,8 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath": "${config:python.pythonPath}",
-      "module": "ubitflashtool",
+      "pythonPath": "${command:python.interpreterPath}",
+      "module": "ubittool",
       "args": [],
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
@@ -94,8 +94,8 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath": "${config:python.pythonPath}",
-      "module": "ubitflashtool",
+      "pythonPath": "${command:python.interpreterPath}",
+      "module": "ubittool",
       "args": ["gui"],
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
