--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "python.testing.unittestEnabled": false,
-  "python.testing.pyTestEnabled": true,
+  "python.testing.pytestEnabled": true,
   "python.testing.nosetestsEnabled": false,
   "python.formatting.provider": "black",
   "editor.formatOnSave": true,
