--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": true,
-      "pythonPath": "${command:python.interpreterPath}",
+      "python": "${command:python.interpreterPath}",
       "program": "${file}",
       "cwd": "${workspaceFolder}",
       "env": {},
@@ -21,7 +21,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": true,
-      "pythonPath": "${command:python.interpreterPath}",
+      "python": "${command:python.interpreterPath}",
       "program": "${file}",
       "cwd": "",
       "console": "integratedTerminal",
@@ -35,7 +35,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": true,
-      "pythonPath": "${command:python.interpreterPath}",
+      "python": "${command:python.interpreterPath}",
       "program": "${file}",
       "cwd": "",
       "console": "externalTerminal",
@@ -49,7 +49,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath": "${command:python.interpreterPath}",
+      "python": "${command:python.interpreterPath}",
       "program": "${workspaceFolder}/ubittool/cli.py",
       "args": [],
       "cwd": "${workspaceFolder}",
@@ -64,7 +64,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath": "${command:python.interpreterPath}",
+      "python": "${command:python.interpreterPath}",
       "program": "${workspaceFolder}/ubittool/gui.py",
       "args": [],
       "cwd": "${workspaceFolder}",
@@ -79,7 +79,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath": "${command:python.interpreterPath}",
+      "python": "${command:python.interpreterPath}",
       "module": "ubittool",
       "args": [],
       "cwd": "${workspaceFolder}",
@@ -94,7 +94,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath": "${command:python.interpreterPath}",
+      "python": "${command:python.interpreterPath}",
       "module": "ubittool",
       "args": ["gui"],
       "cwd": "${workspaceFolder}",
@@ -109,7 +109,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath": "${command:python.interpreterPath}",
+      "python": "${command:python.interpreterPath}",
       "program": "${workspaceFolder}/make.py",
       "args": ["test"],
       "cwd": "${workspaceFolder}",
