--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+# Pipenv uses pip, which requires setuptools
+requires = ["setuptools", "poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 # Poetry settings
 [tool.poetry]
