--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,13 +11,14 @@ jobs:
     name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
-          python-version: 3.8
+          python-version: '3.8'
+          cache: 'pip'
       - name: Install Poetry
-        uses: abatilo/actions-poetry@v2.1.3
+        run: python -m pip install poetry
       - name: Force poetry install without lock file when not macOS
         if: runner.os != 'macOS'
         run: rm poetry.lock
