--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,13 +12,14 @@ jobs:
     name: Poetry - Py ${{ matrix.python-version }} - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
       - name: Install Poetry
-        uses: abatilo/actions-poetry@v2.1.3
+        run: python -m pip install poetry
       - name: Install ubittool dependencies (not locked)
         if: matrix.python-version != 3.8 || runner.os != 'macOS'
         run: |
@@ -50,7 +51,7 @@ jobs:
     name: Pipenv - Py ${{ matrix.python-version }} - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install pipenv
         run: pipx install pipenv
       - name: Set up Python ${{ matrix.python-version }}
