--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
   tests-poetry:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-20.04, macos-11, windows-latest]
         # The latest macOS 3.7 Python builds have tkinter issues
         # https://github.com/actions/setup-python/issues/402
         python-version: ["3.6", "3.7.9", "3.8", "3.9"]
