--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ classifiers = [
 python = "^3.6,<3.10"
 IntelHex = "^2.2.1"
 uflash = ">=1.1.0,<1.2.1"
+# This version of PyOCD fails in Python 3.10+
 pyocd = "0.19.0"
 click = "^7.0"
 
