--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,24 +3,24 @@ name: Test
 on: [push, pull_request]
 
 jobs:
-  tests-poetry:
+  run-tests:
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-11, windows-latest]
-        # The latest macOS 3.7 Python builds have tkinter issues
-        # https://github.com/actions/setup-python/issues/402
+        os: [ubuntu-20.04, macos-11, windows-2019]
+        # Python 3.6 to 3.10 Python builds have tkinter issues in macOS
+        # https://github.com/actions/setup-python/issues/649
         python-version: ["3.6", "3.7", "3.8", "3.9"]
         exclude:
-        # The Tkinter shipped with Python 3.6 in GH Actions crashes in macOS 11
-        # Part of the error message: macOS 11 (1107) or later required, have instead 11 (1106)
-        # https://github.com/actions/setup-python/issues/580
-        - os: macos-11
-          python-version: "3.6"
+          # The Tkinter shipped with Python 3.6 in GH Actions crashes in macOS 11
+          # Part of the error message: macOS 11 (1107) or later required, have instead 11 (1106)
+          # https://github.com/actions/setup-python/issues/580
+          - os: macos-11
+            python-version: "3.6"
       fail-fast: false
-    name: Poetry - Py ${{ matrix.python-version }} - ${{ matrix.os }}
+    name: Py ${{ matrix.python-version }} - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
