--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-11, windows-2019]
-        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
         # There are issues with Tkinter & Python in the GH Actions environment
         # So we control which exact minor versions are used, which are known to
         # work, but unfortunately don't have a release for the Windows runner
@@ -26,6 +26,8 @@ jobs:
             python-version: "3.8.15"
           - os: macos-11
             python-version: "3.9.15"
+          - os: macos-11
+            python-version: "3.10.13"
       fail-fast: false
     name: Py ${{ matrix.python-version }} - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -39,7 +41,7 @@ jobs:
       - name: Install Poetry
         run: python -m pip install poetry
       - name: Install ubittool dependencies
-        run: poetry install --verbose
+        run: poetry install --no-ansi -vvv
       - name: Prepare Ubuntu xvfb
         if: runner.os == 'Linux'
         run: |
